Trying more shit.

--- a/DreamCloak/style/main.css
+++ b/DreamCloak/style/main.css
@@ -1,9 +1,8 @@
 /* Built-In Tag Style */
 
 body {
-	background: slategrey;
-	background: linear-gradient(steelBlue, slateBlue);
-	overflow: hidden;
+	/*background: slategrey;*/
+	/*background: linear-gradient(steelBlue, slateBlue);*/
 }
 
 /* Fruit of Life Background */
