--- a/DreamCloak/style/main.css
+++ b/DreamCloak/style/main.css
@@ -1,13 +1,16 @@
 /* Built-In Tag Style */
 
 body {
-	/*background: slategrey;*/
-	/*background: linear-gradient(steelBlue, slateBlue);*/
+	background: steelBlue !important;
+	background-image: url("../images/seedoflife.png") !important;
 }
 
-/* Fruit of Life Background */
+/* UI Style */
 
-#fruitOfLife {
-	width: 100%;
-	height: 100%;
+#ui-container {
+	width: 80%;
+	height: 80%;
+	background-color: rgba(255, 255, 255, 0.3);
 }
+
+.container
