--- a/DreamCloak/style/main.css
+++ b/DreamCloak/style/main.css
@@ -5,12 +5,21 @@ body {
 	background-image: url("../images/seedoflife.png") !important;
 }
 
+hr {
+	border-top: 1px solid #555 !important;
+}
+
 /* UI Style */
 
 #ui-container {
-	width: 80%;
-	height: 80%;
-	background-color: rgba(255, 255, 255, 0.3);
+	background-color: rgba(255, 255, 255, 0.4);
+	border-radius: 20px 20px;
 }
 
-.container
+#title {
+	text-align: center;
+}
+
+span.dc-name {
+	color: slateBlue;
+}
