--- a/DreamCloak/style/main.css
+++ b/DreamCloak/style/main.css
@@ -40,6 +40,28 @@ hr {
 	display: none;
 }
 
+#select-mode {
+	display: none;
+}
+
+.btn-group.bootstrap-select {
+	margin-top: 50px;
+	margin-bottom: 200px !important;
+}
+
+.filter-option.pull-left {
+	text-align: center !important;
+	font-size: 2em;
+	font-weight: bold;
+}
+
+#mode {
+}
+
+#mode-menu {
+	display: none;
+}
+
 button.btn.btn-primary {
 	border-radius: 40px 40px;
 	margin-bottom: 20px;
