--- a/DreamCloak/style/main.css
+++ b/DreamCloak/style/main.css
@@ -35,6 +35,18 @@ hr {
 	background-color: steelBlue;
 }
 
+#apply-row {
+	display: none;
+}
+
+#apply {
+	text-transform: uppercase;
+	font-weight: bold;
+	width: 200px;
+	height: 50px;
+	margin-top: 30px;
+	margin-bottom: 30px;
+}
 
 #select-category {
 	display: none;
@@ -48,9 +60,13 @@ hr {
 	display: none;
 }
 
+#mode-col {
+	padding-top: 50px;
+}
+
 .btn-group.bootstrap-select {
-	margin-top: 50px;
-	margin-bottom: 70px !important;
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 .filter-option.pull-left {
@@ -68,7 +84,7 @@ hr {
 	margin-bottom: 20px;
 }
 
-.slider-label {
+.ui-label {
 	text-transform: uppercase;
 	font-weight: bold;
 }
@@ -85,6 +101,7 @@ button.btn.btn-primary.bolded {
 
 button.btn.btn-primary.bolded.category {
 	height: 100px;
+	width: 200px;
 	background-color: darkCyan;
 }
 
