--- a/Villein/style/main.css
+++ b/Villein/style/main.css
@@ -14,9 +14,6 @@ body {
 		background-size: 100%;
 }
 
-#header {
-}
-
 #baseboard {
 }
 
@@ -25,28 +22,45 @@ body {
 }
 
 #number-entry-cell {
-		width: 90%;
-		margin-left: 5%;
-		margin-right: 5%;
+		margin-left: 10%;
 }
 
 #number-entry {
 	color: transparent;
-	text-shadow: 0px 0px 3px crimson;
+	text-shadow: 0px 0px 3px crimson,
+		0px 0px 5px salmon;
 	background-color: black;
 	text-transform: uppercase;
 	font-family: "digitalSeven";
-	font-size: 5em;
+	font-size: 4em;
 	letter-spacing: 10vw;
 	overflow: hidden;
 	text-align: right;
-	width: 100%;
+	width: 90%;
 }
 
 #submit {
 	font-size: 2em;
 	margin-top: 20px;
 	margin-bottom: 10px;
+}
+
+#output {
+}
+
+.villein-digit {
+		background-color: #00245d;
+		border: 5px solid #4d91ff;
+		margin-top: 50px;
+		margin-bottom: 50px;
+		padding-left: 0;
+		padding-right: 0;
+		margin-left: auto;
+		margin-right: auto;
+		display: block;
+		-webkit-transform: rotate(45deg);
+		-ms-transform: rotate(45deg);
+		transform: rotate(45deg);
 }
 
 ::-webkit-input-placeholder {
