--- a/Villein/style/main.css
+++ b/Villein/style/main.css
@@ -39,9 +39,15 @@ body {
 	width: 90%;
 }
 
+#clear {
+		font-size: 2em;
+		margin-top: 20px;
+		margin-bottom: 10px;
+}
+
 #submit {
 	font-size: 2em;
-	margin-top: 20px;
+	margin-top: 10px;
 	margin-bottom: 10px;
 }
 
