--- a/style/main.css
+++ b/style/main.css
@@ -52,3 +52,104 @@ body {
 
 ::-moz-selection { background: #5af; color: #fff; text-shadow: none; }
 ::selection { background: #5af; color: #fff; text-shadow: none; }
+
+@font-face {
+	font-family: 'si';
+	src: url('../images/socicon/socicon.eot');
+	src: url('../images/socicon/socicon.eot?#iefix') format('embedded-opentype'),
+	url('../images/socicon/socicon.woff') format('woff'),
+	url('../images/socicon/socicon.ttf') format('truetype'),
+	url('../images/socicon/socicon.svg#icomoonregular') format('svg');
+	font-weight: normal;
+	font-style: normal;
+
+}
+
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+	@font-face {
+		font-family:si;
+		src: url(../images/socicon/socicon.svg) format(svg);
+	}
+}
+
+.soc {
+	margin-top: 40px;
+	margin-left: 15%;
+	padding: 0;
+	list-style: none;
+}
+
+.soc li {
+	display:inline-block;
+		*display:inline;
+		zoom:1;
+	}
+
+	.soc li a {
+		font-family:si!important;
+		font-style:normal;
+		font-weight:400;
+		-webkit-font-smoothing:antialiased;
+		-moz-osx-font-smoothing:grayscale;
+		-webkit-box-sizing:border-box;
+		-moz-box-sizing:border-box;
+		-ms-box-sizing:border-box;
+		-o-box-sizing:border-box;
+		box-sizing:border-box;
+
+		-o-transition:.1s;
+		-ms-transition:.1s;
+		-moz-transition:.1s;
+		-webkit-transition:.1s;
+		transition:.1s;
+		-webkit-transition-property: transform;
+		transition-property: transform;
+		-webkit-transform: translateZ(0);
+		transform: translateZ(0);
+
+		overflow:hidden;
+		text-decoration:none;
+		text-align:center;
+		display:block;
+		position: relative;
+		z-index: 1;
+		width: 24px;
+		height: 24px;
+		line-height: 24px;
+		font-size: 13px;
+		-webkit-border-radius: 10px;
+		-moz-border-radius: 10px;
+		border-radius: 10px;
+		margin-right: 10px;
+		color: #ffffff;
+		background-color: none;
+	}
+
+	.soc a:hover {
+		z-index: 2;
+		-webkit-transform: scale(1.1);
+		transform: scale(1.1);
+	}
+
+	.soc-icon-last{
+		margin: 0 !important;
+	}
+
+	.soc-facebook {
+		background-color: #3e5b98;
+	}
+	.soc-facebook:before {
+		content: 'b';
+	}
+	.soc-linkedin {
+		background-color: #3371b7;
+	}
+	.soc-linkedin:before {
+		content: 'j';
+	}
+	.soc-github {
+		background-color: #5380c0;
+	}
+	.soc-github:before {
+		content: 'Q';
+	}
