Added update methods and shaped fire.

--- a/FirePlace/style/main.css
+++ b/FirePlace/style/main.css
@@ -4,5 +4,5 @@
 
 body {
 	overflow: hidden;
-	background-color: darkslategrey;
+	background-image: url("http://a1star.com/images/star-tile-far-away.jpg");
 }
