--- a/AcousticForest/style/main.css
+++ b/AcousticForest/style/main.css
@@ -10,8 +10,32 @@ body {
 	background-color: #0d1628;
 }
 
-#firstTree {
-	position : absolute;
-	bottom : 0px;
-	height : 80%;
+#tree-1 {
+	position: absolute;
+	bottom: 0px;
+	left: -30%;
+}
+
+#tree-2 {
+	position: absolute;
+	bottom: -40px;
+	left: 60%;
+}
+
+#snow{
+	background: none;
+	background-image: url('../images/s1.png'), url('../images/s2.png'), url('../images/s3.png');
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index:1;
+	-webkit-animation: snow 1000s linear infinite;
+}
+
+@keyframes snow {
+  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
+  50% {background-position: 50000px 50000px, 10000px 20000px, -10000px 15000px;}
+  100% {background-position: 10000px 10000px, 20000px 40000px, -20000px 30000px;}
 }
