Made resolutions that are done more flashy.

--- a/Resolutions/style/main.css
+++ b/Resolutions/style/main.css
@@ -51,6 +51,10 @@ li:before {
 	margin-right : 10px;
 }
 
+.done {
+  color: rgb(40, 255, 239);
+}
+
 .done:before {
 	content : "\e067" !important;
 }
