--- a/Resolutions/style/main.css
+++ b/Resolutions/style/main.css
@@ -3,90 +3,73 @@
  *
  * Kyle Hovey
  */
-
 body {
-	background-image : url(../images/bg.png);
-	-webkit-font-smoothing: antialiased;
-}
+  background-image: url(../images/bg.png);
+  -webkit-font-smoothing: antialiased; }
 
 h1 {
-	font-family: 'IM Fell English SC', serif !important;
-	color : rgb(240, 240, 240) !important;
-	margin-top : 25px !important;
-}
+  font-family: "IM Fell English SC", serif !important;
+  color: #f0f0f0 !important;
+  margin-top: 25px !important; }
 
 header {
-	border-top : 5px solid rgb(255, 204, 0);
-	margin-bottom : 30px;
-}
+  border-top: 5px solid #ffcc00;
+  margin-bottom: 30px; }
 
 #title {
-	background-color : rgb(63, 31, 31);
-	border-radius : 5px;
-	padding-left : 10px;
-	padding-right : 10px;
-	box-shadow : -2px -2px 5px rgb(20, 20, 20);
-}
+  background-color: #3f1f1f;
+  border-radius: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  box-shadow: -2px -2px 5px #141414; }
 
 #resolutions {
-	font-family: 'Acme', sans-serif !important;
-	font-size : 1.2em;
-}
+  font-family: "Acme", sans-serif !important;
+  font-size: 1.2em; }
 
 #resolutions-list {
-	padding-top : 15px;
-	padding-bottom : 10px;
-	padding-left : 20px !important;
-	padding-right : 20px !important;
-}
+  padding-top: 15px;
+  padding-bottom: 10px;
+  padding-left: 20px !important;
+  padding-right: 20px !important; }
 
 li {
-	display : block;
-}
-
-li:before {
-	content : "\e157";
-	font-family : 'Glyphicons Halflings';
-	float : left;
-	margin-right : 10px;
-}
+  display: block; }
+  li:before {
+    content: "\e157";
+    font-family: 'Glyphicons Halflings';
+    float: left;
+    margin-right: 10px; }
 
 .done {
-  color: rgb(40, 255, 239);
-}
-
-.done:before {
-	content : "\e067" !important;
-}
+  color: #28ffef; }
+  .done:before {
+    content: "\e067" !important; }
 
 .resolution {
-	list-style-position : inside;
-	border-radius : 5px;
-	background-image: linear-gradient(to bottom, rgb(51, 122, 183) 0%, rgb(40, 96, 144));
-	box-shadow : -2px -2px 5px rgb(20, 20, 20);
-	margin-bottom : 10px;
-	margin-top : 10px;
-	padding : 20px;
-}
+  list-style-position: inside;
+  border-radius: 5px;
+  background-image: linear-gradient(to bottom, #337ab7 0%, #286090);
+  box-shadow: -2px -2px 5px #141414;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  padding: 20px; }
 
 .card-container {
-	background-color : rgb(80, 80, 80);
-	border-radius : 5px;
-	box-shadow : -2px -2px 5px rgb(20, 20, 20);
-	color : rgb(240, 240, 240);
-	padding : 25px;
-	overflow : none;
-	margin-bottom : 20px;
-}
+  background-color: #505050;
+  border-radius: 5px;
+  box-shadow: -2px -2px 5px #141414;
+  color: #f0f0f0;
+  padding: 25px;
+  overflow: none;
+  margin-bottom: 20px; }
 
 .title-text {
-	font-family : 'Acme', sans-serif;
-	font-size : 2em;
-	font-weight : bold;
-}
+  font-family: 'Acme', sans-serif;
+  font-size: 2em;
+  font-weight: bold; }
 
 .progress {
-	margin-top : 10px;
+  margin-top: 10px;
   margin-bottom: 0px !important;
-	background-color : rgb(119, 119, 119) !important;
-}
+  background-color: #777777 !important; }
