--- a/Resolutions/src/sass/main.scss
+++ b/Resolutions/src/sass/main.scss
@@ -4,8 +4,8 @@
  * Kyle Hovey
  */
 
-$header-font: 'IM Fell English SC', serif;
-$resolution-font: 'Acme', sans-serif;
+$header-font: 'Bad Script', cursive;
+$resolution-font: 'Raleway', serif;
 
 $text-color: rgb(240, 240, 240);
 $success-text: rgb(40, 255, 239);
